# Trading-bot

./: .env.example  .gitignore  pyproject.toml
alerts/: __init__.py  base.py  discord_notifier.py  email_notifier.py  factory.py  manager.py  models.py  sms_notifier.py  telegram_notifier.py
backtesting/: __init__.py  engine.py  models.py  monte_carlo.py  simulated_pricing.py  statistics.py  volatility_estimator.py  walk_forward.py
broker/: __init__.py  alpaca_adapter.py  base.py  exceptions.py  models.py
config/: settings.py
dashboard/: __init__.py  app.py  auth.py  context.py  forex_loop.py  paper_reset.py  routes.py  scheduler.py  stock_loop.py  trading_loop.py  websocket.py
data/: __init__.py  bars_repository.py  database.py  ingestion.py  schema.py
decision_engine/: __init__.py  factors.py  models.py  scoring.py
execution/: __init__.py  executor.py  models.py  order_builder.py
forex/: models.py  oanda_adapter.py  position_repository.py  position_schema.py  sizing.py
indicators/: __init__.py  candlesticks.py  models.py  momentum.py  moving_averages.py  trend.py  volatility.py
ml/: __init__.py  feature_store_repository.py  feature_store_schema.py  inference.py  models.py  registry.py  trade_outcome_repository.py  trade_outcome_schema.py  trade_outcomes.py  training.py
options/: __init__.py  chain.py  greeks.py  implied_volatility.py  iv_rank.py  models.py  selection.py  strategy_builders.py
risk/: __init__.py  halt_manager.py  halt_repository.py  halt_schema.py  kelly.py  pre_trade.py  sizing.py  statistics.py
scanner/: __init__.py  models.py  optionable_repository.py  optionable_schema.py  scans.py  service.py  universe.py  universe_repository.py  universe_schema.py
stocks/: models.py  position_repository.py  position_schema.py
(+93 files in other folders)
