[project]
name = "trading-bot"
version = "0.1.0"
description = "Automated options + forex trading platform"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "alpaca-py>=0.33",
    "asyncpg>=0.29",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["config*", "utils*", "broker*", "data*", "indicators*", "scanner*", "options*", "decision_engine*", "risk*", "execution*", "trade_management*"]
