[project]
name = "trading-bot"
version = "0.1.0"
description = "Automated options + forex trading platform"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "alpaca-py>=0.33",
    "asyncpg>=0.29",
    "pandas>=2.2",
    "httpx>=0.27",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "mlflow>=2.14",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "apscheduler>=3.10",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["config*", "utils*", "broker*", "data*", "indicators*", "scanner*", "options*", "decision_engine*", "risk*", "execution*", "trade_management*", "alerts*", "backtesting*", "ml*", "dashboard*", "forex*"]
